--- a/.slugignore
+++ b/.slugignore
@@ -3,6 +3,6 @@
 /app/datasets/original
 /app/datasets/ds.md
 /app/datasets/sample_ds.md
-/app/scripts
+/app/local-scripts
 /app/.github
 /transcripts2
