--- a/.slugignore
+++ b/.slugignore
@@ -1,9 +1,9 @@
-/app/img
-/app/datasets/imdb
-/app/datasets/original
-/app/datasets/ds.md
-/app/datasets/sample_ds.md
-/app/local-scripts
-/app/.github
-/app/transcripts2
-/app/transcripts
+/img
+/datasets/imdb
+/datasets/original
+/datasets/ds.md
+/datasets/sample_ds.md
+/local-scripts
+/.github
+/transcripts2
+/transcripts
